Use Docraptor repos directly from maintainer repo

--- a/composer.json
+++ b/composer.json
@@ -4,25 +4,13 @@
     "description": "This bundle assists in creating PDF files with DocRaptor",
     "keywords": ["pdf"],
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Ticketpark contributors and others",
             "homepage": "https://github.com/Ticketpark/PdfBundle/contributors"
         }
     ],
-
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Ticketpark/docraptor.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/MartijnDwars/docraptor-bundle.git"
-        }
-    ],
-
     "require": {
         "php": ">=5.3.3",
         "bytes/docraptor-bundle": "dev-master",
